Bug 228881 - REGRESSION (r185111): Links to App Store doesn't work when opening a PDF in Safari on iOS and iPadOS
Summary: REGRESSION (r185111): Links to App Store doesn't work when opening a PDF in S...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Horton
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2021-08-06 17:39 PDT by Tim Horton
Modified: 2021-08-06 18:40 PDT (History)
4 users (show)

See Also:


Attachments
Patch (2.09 KB, patch)
2021-08-06 17:39 PDT, Tim Horton
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Horton 2021-08-06 17:39:13 PDT
REGRESSION (r185111): Links to App Store doesn't work when opening a PDF in Safari on iOS and iPadOS
Comment 1 Tim Horton 2021-08-06 17:39:33 PDT
Created attachment 435103 [details]
Patch
Comment 2 Tim Horton 2021-08-06 17:39:36 PDT
<rdar://problem/81294035>
Comment 3 EWS 2021-08-06 18:40:00 PDT
Committed r280751 (240336@main): <https://commits.webkit.org/240336@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 435103 [details].