REGRESSION (r185111): Links to App Store doesn't work when opening a PDF in Safari on iOS and iPadOS https://bugs.webkit.org/show_bug.cgi?id=228881 rdar://81294035

Reviewed by Andy Estes.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::navigateToPDFLinkWithSimulatedClick):
Clicking a link in PDF should absolutely be allowed to launch an external app.
Humorously, r185111 applied the correct value to PDFPlugin (macOS), but the
wrong value to WKPDFView (iOS). Bring them into alignment.


Canonical link: https://commits.webkit.org/240336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280751 268f45cc-cd09-0410-ab3c-d52691b4dbfc